Update notebooks to correct some typos and an overlooked dependency.

--- a/Examples/Complex_SEVIRI.ipynb
+++ b/Examples/Complex_SEVIRI.ipynb
@@ -31,7 +31,13 @@
     "    - rho_dv: Diffuse to satellite view reflectances\n",
     "    - rho_dd: Diffuse to diffuse reflectances\n",
     "    \n",
-    "We also apply a land/sea mask (derived from the NASA SRTM data and remapped onto the SEVIRI grid) to mask out all non-water pixels."
+    "We also apply a land/sea mask (derived from the NASA SRTM data and remapped onto the SEVIRI grid) to mask out all non-water pixels.\n",
+    "\n",
+    "\n",
+    "NOTE: This requires the netcdf python library, you must install it for this example to work!\n",
+    "It can be installed with:\n",
+    "\n",
+    "`conda install -c conda-forge netCDF4` or `pip install netCDF4`"
    ]
   },
   {
@@ -380,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
