--- a/Examples/Simple_SLSTR.ipynb
+++ b/Examples/Simple_SLSTR.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "A single example scene, together with sample output, is included in the zenodo archive associated with pycoxmunk: https://doi.org/10.5281/zenodo.7885995\n",
     "\n",
-    "In this example we compute the sea surface reflectance based on assumed constant winds across the swath. We do not apply and cloud or land masking and we do not calculate any of the BRDF parameters."
+    "In this example we compute the sea surface reflectance based on assumed constant winds across the swath. We do not apply cloud or land masking and we do not calculate any of the BRDF parameters."
    ]
   },
   {
@@ -145,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
