Update notebooks with info about directories.

--- a/Examples/Complex_SEVIRI.ipynb
+++ b/Examples/Complex_SEVIRI.ipynb
@@ -24,6 +24,8 @@
     "\n",
     "Output from this example notebook is available on zenodo at the same link as above.\n",
     "\n",
+    "This example assumes that input data is located in the same directory as the notebook itself, and that output data should be saved to an `out` subfolder. These may not be convenient, so you can change the directories with the `sev_fname` and `out_dir` variables below.\n",
+    "\n",
     "In this example we compute the sea surface reflectance and also the BRDF values:\n",
     "\n",
     "    - rho_0d: Solar beam to satellite view reflectances\n",
@@ -99,10 +101,13 @@
    "outputs": [],
    "source": [
     "# Filename of the input granule\n",
-    "sev_fname = 'd:/sat_data/SEV/MSG3-SEVI-MSG15-0100-NA-20160326151242.278000000Z-NA.nat'\n",
+    "sev_fname = './MSG3-SEVI-MSG15-0100-NA-20160326151242.278000000Z-NA.nat'\n",
     "\n",
     "# Landmask filename\n",
     "lsm_fname = './SEVIRI_LANDMASK.tiff'\n",
+    "\n",
+    "# Output directory\n",
+    "out_dir = './out/'\n",
     "\n",
     "# Filenames of the U and V 10m wind components, here taken from ERA5\n",
     "u10_fname = './ecmwf-era5_oper_an_sfc_201603261500.10u.nc'\n",
@@ -120,7 +125,7 @@
     "# Cache dir for use in satpy's resample routines\n",
     "# This is optional, but can help speed things up - especially for \n",
     "# geostationary satellites where the area covered is a constant region.\n",
-    "cache_dir = 'd:/sat_data/SEV/cache/'\n",
+    "cache_dir = './cache/'\n",
     "\n",
     "\n",
     "# A list of datasets that we want to save\n",
@@ -358,7 +363,7 @@
    "outputs": [],
    "source": [
     "# Save original data to disk.\n",
-    "pcm.scn.save_datasets(datasets=bnames_out, base_dir='d:/sat_data/sev/out/', enhance=False, dtype=np.float32)"
+    "pcm.scn.save_datasets(datasets=bnames_out, base_dir=out_dir, enhance=False, dtype=np.float32)"
    ]
   },
   {
