--- a/Examples/Simple_GOES_ABI.ipynb
+++ b/Examples/Simple_GOES_ABI.ipynb
@@ -18,7 +18,9 @@
     " 2) For loading the data in satpy: `h5netcdf`.\n",
     " 3) For saving the results: `rasterio`.\n",
     "\n",
-    "Here we compute the sea surface reflectance based on assumed constant winds across the globe. We do not apply and cloud or land masking and we do not calculate any of the BRDF parameters."
+    "Here we compute the sea surface reflectance based on assumed constant winds across the globe. We do not apply cloud or land masking and we do not calculate any of the BRDF parameters.\n",
+    "\n",
+    "This example assumes that output data should be saved to an out subfolder. This may not be convenient, so you can change the directory using the `out_dir` variable below."
    ]
   },
   {
@@ -67,10 +69,10 @@
     "#\n",
     "# NOTE: Downloaded data is not automatically deleted after the notebook is run!\n",
     "# You must manually delete the files from this directory.\n",
-    "indir = 'D:/sat_data/pycoxmunk_test/'\n",
+    "indir = './'\n",
     "\n",
     "# Set the directory where we'll save the output\n",
-    "outdir = 'D:/sat_data/pycoxmunk_test/out/'"
+    "outdir = './out/'"
    ]
   },
   {
