--- a/Examples/Simple_SLSTR.ipynb
+++ b/Examples/Simple_SLSTR.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "A single example scene, together with sample output, is included in the zenodo archive associated with pycoxmunk: https://doi.org/10.5281/zenodo.7885995\n",
     "\n",
-    "In this example we compute the sea surface reflectance based on assumed constant winds across the swath. We do not apply cloud or land masking and we do not calculate any of the BRDF parameters."
+    "In this example we compute the sea surface reflectance based on assumed constant winds across the swath. We do not apply cloud or land masking and we do not calculate any of the BRDF parameters.\n",
+    "\n",
+    "This example assumes that input data is located in the same directory as the notebook itself, and that output data should be saved to an out subfolder. These may not be convenient, so you can change the directories with the `indir` and `out_dir` variables below."
    ]
   },
   {
@@ -46,10 +48,10 @@
     "# Set the directory containing the SLSTR data dir\n",
     "# This folder should contain one or more subfolders with the SLSTR data (ending .SEN3)\n",
     "# To save memory and CPU time, only use a few granules maximum for this.\n",
-    "indir = 'D:/sat_data/slstr/'\n",
+    "indir = './slstr/'\n",
     "\n",
     "# Set the directory where we'll save the output\n",
-    "outdir = 'D:/sat_data/slstr/out/'"
+    "outdir = './slstr/out/'"
    ]
   },
   {
