--- a/Examples/Complex_SEVIRI.ipynb
+++ b/Examples/Complex_SEVIRI.ipynb
@@ -36,10 +36,10 @@
     "We also apply a land/sea mask (derived from the NASA SRTM data and remapped onto the SEVIRI grid) to mask out all non-water pixels.\n",
     "\n",
     "\n",
-    "NOTE: This requires the netcdf python library, you must install it for this example to work!\n",
-    "It can be installed with:\n",
+    "NOTE: This requires the netcdf and rioxarray python libraries, you must install there for this example to work!\n",
+    "They can be installed with:\n",
     "\n",
-    "`conda install -c conda-forge netCDF4` or `pip install netCDF4`"
+    "`conda install -c conda-forge netCDF4 rioxarray` or `pip install netCDF4 rioxarray`"
    ]
   },
   {
